# tldw

./: .gitignore  AMD_requirements.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  Get_Playlist_URLs.py  LANGUAGE_FEATURE_CHANGES.md  LICENSE.txt  Long_Summarize_openai.py  New.md  Project_Guidelines.md  README  README.md  Results_Georges DEATH from Heart Attack! HD  Young Sheldon s07x12_Georges DEATH from Heart Attack! HD  Young Sheldon s07x12.segments_pretty.json  Results_Museum of Hip-Hop Panel - SNL_Museum of Hip-Hop Panel - SNL.segments_pretty.json  Results_Museum of Hip-Hop Panel - SNL_Museum of Hip-Hop Panel - SNL_summary.txt  Results_This cinnamon roll hack broke the internet_This cinnamon roll hack broke the internet.segments_pretty.json  SQLite_DB.py  airoboros-l2.py  all_summaries.txt  all_transcriptions.json  aoe-grand-finale.txt  app_fixed.py  check_app_health.py  chunker.py  compare-app.py  compare-english.json  compare.py  compare.yaml  config.txt  deptree_results.txt  diarize.py  export_selected_items.md  fix_gradio_error.py  interview_aoe-grand-finale-txt-4096_english_airoboros-l2-aoe-v2_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1690739002.ndjson  interview_aoe-grand-finale-txt-4096_english_airoboros-l2-aoe-v3_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1690739769.ndjson  interview_aoe-grand-finale-txt-4096_english_airoboros-l2-aoe-v3b_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1690740162.ndjson  interview_aoe-grand-finale-txt-4096_english_airoboros-l2-aoe-v3d_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1690740566.ndjson  interview_ufo-chunk-4096_english_airoboros-l2-v3_none_summary_airoboros-l2-13b-gpt4-1.4.1.ggmlv3.q6-K_1690730344.ndjson  (+31 more)
.github/ISSUE_TEMPLATE/: bug-report-i-found-a-bug-in-tldw-.md
.github/workflows/: python-app.yml
App_Function_Libraries/: Article-Extractor-Lib.py  Article-Summarization-Lib.py  Article_Extractor_Lib.py  Article_Summarization_Lib.py  Audio-Transcription-Lib.py  Audio_Files.py  Audio_Transcription_Lib.py  Book_Ingestion_Lib.py  Chat.py  Chat_related_functions.py  ChromaDB_Library.py  Chunk-Lib.py  Chunk_Lib.py  Confabulation_check.py  DB_Manager.py  Diarization-Lib.py  Diarization_Lib.py  Email_Processing.py  Email_RAG.py  Gradio_Emails.py  Gradio_Related.py  Gradio_Related_Fixed.py  LLM_API_Calls.py  LLM_API_Calls_Local.py  Llamafile.py  Local-File-Processing.py  Local-LLM-Inference-Engine.py  Local-Summarization-Lib.py  Local_File_Processing.py  Local_File_Processing_Lib.py  Local_LLM_Inference_Engine.py  Local_LLM_Inference_Engine_Lib.py  Local_Summarization_Lib.py  Old-Chunking-Lib.py  Old_Chunking_Lib.py  PDF_Ingestion_Lib.py  Prompt_Handling.py  RAG_Libary_2.py  RAG_Library.py  SQLite_DB.py  (+14 more)
App_Function_Libraries/Audio/: Audio_Files.py  Audio_Transcription_Lib.py  Diarization_Lib.py  Test.py
App_Function_Libraries/Benchmarks_Evaluations/: Confabulation_check.py  ms_g_eval.py
App_Function_Libraries/Books/: Book_Ingestion_Lib.py
Config_Files/: Backup_Config.txt  config.txt  mediawiki_import_config.yaml
Databases/: chatDB.db  prompts.db
Docs/: Bitnet_and_Mamba_Papers.md  CLI_Reference.md  Citations_and_Confabulations.md  Database.md  Documentation.md  Evaluation_Plans.md  FEATURES.md  Handy_Dandy_Papers.md  Ideas.md  Pieces.md  Prompt_Engineering_Notes.md  RAG.md  RAG_Notes.md  RAG_Plan.md  Setting_up_a_local_LLM.md  TTS_STT.md  The_Primer.md  User_Guide.md  VLM.md
Docs/Chunking/: app.py  (+1 more)
HF/: Dockerfile  Gradio_Related.py  HF_Dockerfile  app.py  requirements.txt
Helper_Scripts/: Ingest_Prompts.py  Inspect_DB.py  Nginx_Setup.md  Theme-Tester.py  Turn_JSON_into_Txt.py  auto-md.py  mikupad_compiled.html  sprompt.txt
Samples/: interview_lex-300_english_airoboros-l2-context_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1691017487.ndjson  prepare_lex-300_english_airoboros-l2-context.ndjson
Server_API/: API_Notes.md  API_Plan.md  API_README.md  Dockerfile  requirements.txt
Tests/: Code_Map.md  Data-extract-prompt.txt  Gradio-sanity-check.py  RAG_Benchmarks.md  Scrape-Sites-test.txt  Summarization_Benchmark.py  conf_test.py  conftest.py  general_tests.py  test_api_calls.py  test_chat_functions.py  test_cleanup.py  test_document_versioning.py  test_error_handling.py  test_integration.py  test_keyword_functions.py  test_logging.py  test_media_functions.py  test_performance.py  test_search_functions.py  test_sqlite_db.py  test_summarize.py  test_transcription_summarization.py  test_utils.py
compare/: aoe-english.json  aoe.yaml  ufo.yaml
data/: Elon Musk's BRUTALLY Honest Interview With Tucker Carlson (2023) [zaB_20bkoA4].diarize.json  Elon Musk's BRUTALLY Honest Interview With Tucker Carlson (2023) [zaB_20bkoA4].info.json  Elon Musk's BRUTALLY Honest Interview With Tucker Carlson (2023) [zaB_20bkoA4].summary.json  Elon Musk： A future worth getting excited about - TED - Tesla Texas Gigafactory interview [YRvf00NooN8].summary.json  GRAND FINAL - 10,000 AoE2 Event (The Resurgence) [jnoxjLJind4].diarize.json  Sam Harris： Consciousness, Free Will, Psychedelics, AI, UFOs, and Meaning - Lex Fridman Podcast #185 [4dC_nRYIDZU].summary.json  Subcommittee on National Security, the Border, and Foreign Affairs Hearing [KQ7Dw-739VY].diarize.json  aoe-small.json  elon.json  lex.json  ufo.wav.json
models/: config.yaml
prompts/: airoboros-l2-aoe-v2.txt  airoboros-l2-aoe-v3.txt  airoboros-l2-aoe-v3b.txt  airoboros-l2-aoe-v3d.txt  airoboros-l2-context.txt  airoboros-l2-ufo-steer.txt  airoboros-l2-ufo.txt  airoboros-l2-v3.txt  airoboros-l2-v4.txt
results/: interview_aoe-small-300_english_airoboros-l2-context_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1691017407.ndjson  interview_elon-300_english_airoboros-l2-context_none_summary_jondurbin-airoboros-l2-13b-gpt4-1.4.1_1691017434.ndjson  prepare_aoe-small-300_english_airoboros-l2-context.ndjson  prepare_elon-300_english_airoboros-l2-context.ndjson  prepare_ufo-300_english_airoboros-l2-context.ndjson
tldw-original-scripts/: roller-chatgpt-v2.py  roller-exllama.py  roller-vllm.py
tldw-scripts/: merger.py
(+417 files in other folders)
